[package]
name = "ecdsa_fhe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
primitive-types = "0.12.1"
rayon = "1.7.0"
tfhe = { version = "0.3.1", features = ["boolean", "x86_64-unix"] }
secp256k1 = "0.27.0"